Fix blurry svg scaling of zoom (except for shogi)

--- a/static/site.css
+++ b/static/site.css
@@ -1100,8 +1100,8 @@ cg-resize {
   background: LightGray;
   outline: none;
   opacity: 0.7;
-  -webkit-transition: .2s;
-  transition: opacity .2s;
+/*  -webkit-transition: .2s;*/
+  /*transition: opacity .2s;*/
 }
 
 .slider:hover {
